1999-08-03 Alexandra Ellwood <lxs@mit.edu>

	* prof_file.c (profile_open_file)
		Mac OS side now sets profile->magic to PROF_MAGIC_FILE 
		so the rest of the functions think it's a real profile.
		  
1999-07-22 Jeffrey Altman <jaltman@columbia.edu>

        * prof_init.c (prof_init)
          Change behavior so that a NULL filespec means allocate
          a profile without a backing store.

1999-07-21  Ken Raeburn  <raeburn@mit.edu>

	* prof_int.h (profile_t): Delete typedef, since Miro changed
	prof_int.h to include profile.h, which also has the typedef.
	* prof_file.c, prof_init.c: Fix typos and missed variable and type
	name changes from Miro's patch.

1999-07-21 Miro Jurisic   <meeroh@mit.edu>

	* profile.hin, prof_file.c, prof_init.c, prof_int.h:
		MacOS now uses file specifiers rather than file paths

1999-07-14 Miro Jurisic   <meeroh@mit.edu>

	* profile.hin: added #ifdef __cplusplus extern "C" 

1999-06-23  Danilo Almeida  <dalmeida@mit.edu>

	* prof_init.c (profile_abandon, profile_release): Check whether
		profile is valid before partying on it.

1999-06-18  Ken Raeburn  <raeburn@mit.edu>

	* prof_tree.c (profile_node_iterator): Remove semicolon after
	function body.

1999-06-16  Danilo Almeida  <dalmeida@mit.edu>

	* prof_init.c (profile_init_path): Fix memory leak.

1999-06-09 Miro Jurisic   <meeroh@mit.edu>

	* prof_file.c (profile_update_file): if fopen fails and errno is 0, set
	errno to ENOENT so that we can try multiple names for settings file
	(From Chas Williams)

Wed May 19 11:46:02 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Add windows build rules for putting header files in
		include dir.  Do cleanup of header for windows clean.

Mon May 10 15:27:19 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Do win32 build in subdir.

1999-04-14    <tytso@rsts-11.mit.edu>

	* prof_init.c (profile_abandon): New function which frees the
		profile handle and throwing away any changes that might